preserve longer email input on mobile (bug 1254033)

--- a/src/media/css/newsletter.styl
+++ b/src/media/css/newsletter.styl
@@ -75,6 +75,10 @@ $arrow-size = 10px;
     form label {
         display: inline-block;
         font-weight: 500;
+
+        &.newsletter-email-label {
+            display: block;
+        }
     }
 
     .error-message {
@@ -222,5 +226,8 @@ $arrow-size = 10px;
     }
     .newsletter label span {
         display: none;
+    }
+    .newsletter form label.newsletter-email-label {
+        display: inline-block;
     }
 }
